# sportswear-esg-news-classifier

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  predict.py  pyproject.toml  train.py
.github/: DEPLOYMENT_SETUP.md  gcr-lifecycle.json
docs/: COLLECTION.md  DATABASE.md  LABELING.md  MLOPS.md  PROJECT_STRUCTURE.md  PROMPT_VERSIONING.md
migrations/: 002_classifier_predictions.sql  003_prompt_versioning.sql
models/: ep_best_classifier.joblib  ep_classifier_config.json  ep_cv_metrics.json  ep_fe_comparison.json  ep_feature_config.json  ep_training_config.json  fp_best_classifier.joblib  fp_classifier_config.joblib  fp_classifier_config.json  fp_classifier_model.joblib  fp_classifier_tfidf.joblib  fp_cv_metrics.json  fp_fe_comparison.json  fp_feature_config.json  fp_training_config.json  registry.json
notebooks/: ep1_EDA_FE.ipynb  ep2_model_selection_tuning.ipynb  ep3_model_evaluation_deployment.ipynb  fp1_EDA_FE.ipynb  fp1_classifier.ipynb  fp2_model_selection_tuning.ipynb  fp3_model_evaluation_deployment.ipynb
queries/: article_queries.sql  collection_queries.sql  evidence_queries.sql  labeling_queries.sql
reports/: ner_analysis.txt  ner_stability_analysis.txt
scripts/: __init__.py  backup_db.sh  cleanup_false_positives.py  cleanup_non_english.py  cleanup_unbranded_articles.py  collect_news.py  cron_agent.sh  cron_collect.sh  cron_monitor.sh  cron_scrape.sh  deploy_cloudrun.sh  ep_predict.py  ep_train.py  export_training_data.py  export_website_feed.py  fp_predict.py  fp_train.py  gdelt_backfill.py  label_articles.py  monitor_drift.py  predict.py  promote_model.py  rechunk_articles.py  register_model.py  retrain.py  setup_cron.sh  train.py
tests/: __init__.py  conftest.py  test_agent_config.py  test_agent_drift_workflow.py  test_agent_notifications.py  test_agent_runner.py  test_agent_state.py  test_agent_workflows.py  test_api_client.py  test_chunker.py  test_collector.py  test_database.py  test_deployment.py  test_embedder.py  test_evidence_matcher.py  test_explainability.py  test_fp1_nb_data_utils.py  test_fp1_nb_modeling.py  test_fp2_nb_overfitting.py  test_fp3_nb_deployment.py  test_fp3_nb_threshold.py  test_fp_prefilter.py  (+9 more)
(+85 files in other folders)
