[project]
name = "sportswear-esg-news-classifier"
version = "0.1.0"
description = "ESG News Classifier for sportswear brands - multi-label text classification for Environmental, Social, and Governance news articles"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "newsdataapi>=0.1.12",
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    "pgvector>=0.3",
    "python-dotenv>=1.0",
    "pydantic>=2.0",
    "newspaper4k>=0.9",
    "httpx>=0.27",
    "langdetect>=1.0.9",
    # Labeling pipeline dependencies
    "anthropic>=0.18",
    "openai>=1.0",
    "tiktoken>=0.5",
    # ML classifier dependencies
    "scikit-learn>=1.4",
    "pandas>=2.0",
    "numpy>=1.26",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "joblib>=1.3",
    # Feature engineering dependencies
    "gensim>=4.3",
    "sentence-transformers>=2.2",
    "spacy>=3.7",
    "en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl",
    "notebook>=7.5.1",
    "nbconvert>=7.16.6",
    # API dependencies
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    # MLOps dependencies
    "mlflow>=2.10",
    "evidently>=0.4.15",
    # Explainability dependencies
    "lime>=0.2",
    "shap>=0.44",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
]

[project.scripts]
collect-news = "scripts.collect_news:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
